img and personal info changed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="dist/css/yellow-black.css" rel="stylesheet">
 	<link href="dist/css/preview.css" rel="stylesheet">
 	<link rel="icon" type="image/x-icon" href="/assets/img/swat-squares-md.png">
+	<script src="https://kit.fontawesome.com/e6d6671b0b.js" crossorigin="anonymous"></script>
 	<title>Tornike Shubitidze | Portfolio</title>
 </head>
 
@@ -51,14 +52,20 @@
 				<div class="sections-nav-info">
 					<h6><u>Personal Info:</u></h6>
 
-					<span>Adress: &nbsp; Rustavi, Georgia</span><br>
-					<span>E-Mail: &nbsp; &nbsp;shubavar@gmail.com</span><br>
-					<span> Phone:&nbsp; +995 555 25 99 14</span><br>
-					<a href="https://github.com/tornike-shubitidze" target="blank"> <u><strong>GitHub</strong></u>
-					</a><br>
-					<a href="https://www.linkedin.com/in/tornike-shubitidze-6bba5b130/" style="color: #0a66c2;"
+					<span><i class="fa-solid fa-location-dot"></i> &nbsp; &nbsp; Rustavi, Georgia</span><br>
+					<span><i class="fa-solid fa-envelope"></i> &nbsp; &nbsp;shubavar@gmail.com</span><br>
+					<span><i class="fa-solid fa-phone"></i>&nbsp; &nbsp; +995 555 25 99 14</span><br>
+
+					<a href="https://github.com/tornike-shubitidze" target="blank"> <i
+							class="fa-brands fa-github-square fa-2x"></i>
+					</a>&nbsp;
+					<!-- <a href="https://github.com/tornike-shubitidze" target="blank"> <u><strong>GitHub</strong></u>
+					</a><br> -->
+					<a href="https://www.linkedin.com/in/tornike-shubitidze-6bba5b130/" target="blank">
+						<i class="fa-brands fa-linkedin fa-2x"></i> </a>
+					<!-- <a href="https://www.linkedin.com/in/tornike-shubitidze-6bba5b130/" style="color: #0a66c2;"
 						target="blank">
-						<strong><u>Linkedin</u></strong> </a>
+						<strong><u>Linkedin</u></strong> </a> -->
 				</div>
 			</li>
 		</ul>
@@ -77,7 +84,7 @@
 								<h1
 									class="display-1 display-animated display-animated-in animation-translate animation-item-2">
 									Tornike<br>Shubitidze</h1>
-								<p class="lead animation-translate animation-item-3">FRONT-END WEBDEVELOPER</p>
+								<p class="lead animation-translate animation-item-3">FRONT-END DEVELOPER</p>
 							</div>
 						</div>
 						<div class="section-footer animation-translate animation-item-4">
@@ -139,6 +146,11 @@
 										<div class="progress-bar" role="progressbar" style="width: 75%"
 											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
+									<strong class="progress-label">SASS</strong>
+									<div class="progress progress-animated mb-9">
+										<div class="progress-bar" role="progressbar" style="width: 75%"
+											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
 									<strong class="progress-label">Git</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 65%"
@@ -162,6 +174,11 @@
 											aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 									<strong class="progress-label">Bootstrap</strong>
+									<div class="progress progress-animated mb-9">
+										<div class="progress-bar" role="progressbar" style="width: 80%"
+											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+									<strong class="progress-label">LESS</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 80%"
 											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -196,11 +213,6 @@
 									<span class="timeline-date">2021&nbsp;–&nbsp;now</span>
 									<h3 class="timeline-title">Aidnet</h3>
 									<p class="timeline-text">Junior Front-End Developer</p>
-								</div>
-								<div class="timeline-item">
-									<span class="timeline-date">2017&nbsp;–&nbsp;2020</span>
-									<h3 class="timeline-title">Numus</h3>
-									<p class="timeline-text">Financial Reporting Specialist</p>
 								</div>
 
 							</div>
@@ -240,7 +252,7 @@
 									<a class="card" href="https://aidnet-tornike.netlify.app" target="blank">
 										<img class="card-img-top" src="assets/img/aidnet1.jpg" alt="Janja Prokić">
 										<div class="card-body">
-											<h3 class="card-title">Site</h3>
+											<h3 class="card-title">Website Markup </h3>
 											<h4 class="card-subtitle">Markup and Design</h4>
 										</div>
 									</a>
