mobile response added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 <body class="with-header position-relative" data-spy="scroll" data-target="#sections-nav" data-offset="80">
 	<header class="header">
+		<div class="container-fluid-limited d-flex align-items-center justify-content-end">
+
+			<button class="sections-nav-toggler" aria-label="Toggle navigation">
+				<span class="sections-nav-toggler-bar"></span>
+				<span class="sections-nav-toggler-bar"></span>
+				<span class="sections-nav-toggler-bar"></span>
+				<span class="sections-nav-toggler-bar"></span>
+			</button>
+		</div>
 	</header>
 	<nav class="sections-nav-container">
 		<ul id="sections-nav" class="nav sections-nav sections-nav-animated">
@@ -59,13 +68,10 @@
 					<a href="https://github.com/tornike-shubitidze" target="blank"> <i
 							class="fa-brands fa-github-square fa-2x"></i>
 					</a>&nbsp;
-					<!-- <a href="https://github.com/tornike-shubitidze" target="blank"> <u><strong>GitHub</strong></u>
-					</a><br> -->
+
 					<a href="https://www.linkedin.com/in/tornike-shubitidze-6bba5b130/" target="blank">
 						<i class="fa-brands fa-linkedin fa-2x"></i> </a>
-					<!-- <a href="https://www.linkedin.com/in/tornike-shubitidze-6bba5b130/" style="color: #0a66c2;"
-						target="blank">
-						<strong><u>Linkedin</u></strong> </a> -->
+
 				</div>
 			</li>
 		</ul>
