online shop project added

--- a/index.html
+++ b/index.html
@@ -237,29 +237,39 @@
 							<div class="row animation-translate animation-item-2">
 								<div class="col-12 col-md-4">
 									<a class="card" href="https://blackjack-tornike.netlify.app" target="blank">
-										<img class="card-img-top" src="assets/img/Black-Jack.png" alt="Nanovo">
+										<img class="card-img-top" src="assets/img/Black-Jack.png">
 										<div class="card-body">
 											<h3 class="card-title">BlackJack</h3>
-											<h4 class="card-subtitle">Game</h4>
+											<h4 class="card-subtitle">GAME</h4>
 
 										</div>
 									</a>
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card" href="https://calculator-tornike.netlify.app" target="blank">
-										<img class="card-img-top" src="assets/img/calculator.jpg" alt="Bbop">
+										<img class="card-img-top" src="assets/img/calculator.jpg">
 										<div class="card-body">
 											<h3 class="card-title">Calculator</h3>
-											<h4 class="card-subtitle">Math Calculator</h4>
+											<h4 class="card-subtitle">MATH</h4>
 										</div>
 									</a>
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card" href="https://aidnet-tornike.netlify.app" target="blank">
-										<img class="card-img-top" src="assets/img/aidnet1.jpg" alt="Janja Prokić">
+										<img class="card-img-top" src="assets/img/aidnet1.jpg">
 										<div class="card-body">
 											<h3 class="card-title">Website Markup </h3>
-											<h4 class="card-subtitle">Markup and Design</h4>
+											<h4 class="card-subtitle">DESIGN</h4>
+										</div>
+									</a>
+								</div>
+								<div class="col-12 col-md-4">
+									<a class="card" href="https://github.com/tornike-shubitidze/online-shop"
+										target="blank">
+										<img class="card-img-top" src="assets/img/online-shop.jpg">
+										<div class="card-body">
+											<h3 class="card-title">Online Shop </h3>
+											<h4 class="card-subtitle">DESIGN & FRONT-END</h4>
 										</div>
 									</a>
 								</div>
