--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
 	<link href="dist/css/yellow-black.css" rel="stylesheet">
 	<link href="dist/css/preview.css" rel="stylesheet">
-	<link rel="icon" type="image/x-icon" href="/assets/img/swat-squares-md.png">
+	<link rel="icon" type="image/x-icon" href="./assets/img/swat-squares-md.png">
 	<script src="https://kit.fontawesome.com/e6d6671b0b.js" crossorigin="anonymous"></script>
 	<title>Tornike Shubitidze | Portfolio</title>
 </head>
@@ -137,7 +137,7 @@
 							<h2 class="section-title animation-translate-overline animation-item-1">Skills</h2>
 							<div class="row animation-translate animation-item-2">
 								<div class="col-12 col-md-6">
-									<strong class="progress-label">Javascript</strong>
+									<strong class="progress-label">Javascript (ES6+)</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 85%"
 											aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -162,6 +162,11 @@
 										<div class="progress-bar" role="progressbar" style="width: 65%"
 											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
+									<strong class="progress-label">SQL Server</strong>
+									<div class="progress progress-animated mb-9">
+										<div class="progress-bar" role="progressbar" style="width: 55%"
+											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
 									<strong class="progress-label">JSON Server</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 75%"
@@ -170,6 +175,11 @@
 								</div>
 								<div class="col-12 col-md-6">
 									<strong class="progress-label">React</strong>
+									<div class="progress progress-animated mb-9">
+										<div class="progress-bar" role="progressbar" style="width: 70%"
+											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+									<strong class="progress-label">Redux</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 70%"
 											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -189,16 +199,17 @@
 										<div class="progress-bar" role="progressbar" style="width: 80%"
 											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
+									<strong class="progress-label">GraphQL</strong>
+									<div class="progress progress-animated mb-9">
+										<div class="progress-bar" role="progressbar" style="width: 60%"
+											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
 									<strong class="progress-label">Figma</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 65%"
 											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">SQL Server</strong>
-									<div class="progress progress-animated mb-9">
-										<div class="progress-bar" role="progressbar" style="width: 55%"
-											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
+
 								</div>
 							</div>
 						</div>
