employee-app in projects & netxJS in skills added

--- a/index.html
+++ b/index.html
@@ -142,10 +142,15 @@
 										<div class="progress-bar" role="progressbar" style="width: 85%"
 											aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">Html</strong>
+									<strong class="progress-label">Redux</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 80%"
 											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+									<strong class="progress-label">Html</strong>
+									<div class="progress progress-animated mb-9">
+										<div class="progress-bar" role="progressbar" style="width: 75%"
+											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 									<strong class="progress-label">CSS</strong>
 									<div class="progress progress-animated mb-9">
@@ -167,11 +172,6 @@
 										<div class="progress-bar" role="progressbar" style="width: 55%"
 											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">JSON Server</strong>
-									<div class="progress progress-animated mb-9">
-										<div class="progress-bar" role="progressbar" style="width: 75%"
-											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
 								</div>
 								<div class="col-12 col-md-6">
 									<strong class="progress-label">React</strong>
@@ -179,7 +179,7 @@
 										<div class="progress-bar" role="progressbar" style="width: 70%"
 											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">Redux</strong>
+									<strong class="progress-label">Next.js</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 70%"
 											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -189,12 +189,12 @@
 										<div class="progress-bar" role="progressbar" style="width: 67%"
 											aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">LESS</strong>
+									<strong class="progress-label">Bootstrap</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 80%"
 											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">Bootstrap</strong>
+									<strong class="progress-label">LESS</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 80%"
 											aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -284,6 +284,15 @@
 										</div>
 									</a>
 								</div>
+								<div class="col-12 col-md-4">
+									<a class="card" href="https://employees-app-nextjs.netlify.app" target="blank">
+										<img class="card-img-top" src="assets/img/employee-app-nextjs.jpg">
+										<div class="card-body">
+											<h3 class="card-title">Employee App </h3>
+											<h4 class="card-subtitle">FRONT-END</h4>
+										</div>
+									</a>
+								</div>
 							</div>
 						</div>
 
@@ -320,22 +329,7 @@
 		});
 	});
 
-	// Bootstrap form validation example
-	(function () {
-		'use strict';
-		window.addEventListener('load', function () {
-			var forms = document.getElementsByClassName('needs-validation');
-			var validation = Array.prototype.filter.call(forms, function (form) {
-				form.addEventListener('submit', function (event) {
-					if (form.checkValidity() === false) {
-						event.preventDefault();
-						event.stopPropagation();
-					}
-					form.classList.add('was-validated');
-				}, false);
-			});
-		}, false);
-	})();
+
 </script>
 
 </html>
