working experience date corrected

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 							<h2 class="section-title animation-translate-overline animation-item-1">Experiences</h2>
 							<div class="timeline timeline-animated">
 								<div class="timeline-item">
-									<span class="timeline-date">2021&nbsp;–&nbsp;now</span>
+									<span class="timeline-date">09.2021&nbsp;–&nbsp;08.2022</span>
 									<h3 class="timeline-title">Aidnet</h3>
 									<p class="timeline-text">Junior Front-End Developer</p>
 								</div>
